reconciling reweight and geoweight

--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,8 @@ Currently you can install the development version from [GitHub](https://github.c
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("donboyd5/microweight")
+devtools::install_github("donboyd5/microweight", build_vignettes = TRUE)
+
 ```
 ## Example
 
